fixed scrollbar glitch

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html {
+  scrollbar-gutter: stable;
+}
 body {
   font-family: sans-serif;
   overflow-x: hidden;
